force-app/main/default/objects/Account/fields/Acct_Manager2__c.field-meta.xml
<CustomField>
    <fullName>Acct_Manager2__c</fullName>
    <label>Acct Manager2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>