force-app/main/default/objects/Account/fields/Acct_Manager3__c.field-meta.xml
<CustomField>
    <fullName>Acct_Manager3__c</fullName>
    <label>Acct Manager3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>