force-app/main/default/objects/Account/fields/Acct_Manager45__c.field-meta.xml
<CustomField>
    <fullName>Acct_Manager45__c</fullName>
    <label>Acct Manager45</label>
    <length>50</length>
    <type>Text</type>
</CustomField>